fixed image overflow

--- a/1_Newbie/Profile-Card/app.css
+++ b/1_Newbie/Profile-Card/app.css
@@ -4,6 +4,7 @@ body {
   background: url(./images/bg-pattern-bottom.svg);
   background-color: hsl(185, 75%, 39%);
   font-family: 'Kumbh Sans', sans-serif;
+  rotate: 50%;
 }
 .profile-card {
   /* TODO: shadows */
@@ -11,6 +12,8 @@ body {
   height: 400px;
   border-radius: 3%;
   background-color: white;
+  /* Prevents image from overflowing */
+  overflow: auto;
   position: absolute;
   top: 50%;
   left: 50%;
